# harlequin-bigquery

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: parse_builtins.py
src/harlequin_bigquery/: __init__.py  adapter.py  cli_options.py  functions.py  keywords.py
src/harlequin_myadapter/: __init__.py  adapter.py  cli_options.py
tests/: test_adapter.py
